--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <span>o</span>
     </h1>
     <span class="date">25-02-2026</span>
+    <input id="animation" type="checkbox" onchange="toggleAnimation()" />
     <script src="main.js"></script>
 </body>
 
