--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>¡Feliz cumpleaños Niña Gato! 25-02-2026</title>
     <meta name="viewport" content="width=1400 height=800 initial-scale=1 user-scalable=no" />
     <link href="styles.css" rel="stylesheet">
 </head>
