--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>¡Feliz cumpleaños Niña Gato! 25-02-2026</title>
     <meta name="viewport" content="width=1400 height=800 initial-scale=1 user-scalable=no" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="styles.css" rel="stylesheet">
 </head>
 
